// Protocol buffers for unit testing.
syntax = "proto2";
package labm8;

message TestMessage {
  required string string = 1;
  optional int32 number = 2;

  oneof union_field {
    int32 option_a = 3;
    int32 option_b = 4;
  }
}

message AnotherTestMessage {
  optional int32 number = 1;
}
